animated product image flying to cart
changed logo/favicon
animated product image flying to cart icon
change fonts

Co-Authored-By: BitLord69 <janis_k@hotmail.com>

--- a/sass/_variable-overrides.scss
+++ b/sass/_variable-overrides.scss
@@ -15,4 +15,4 @@ $light: #265439;
 // $link-hover-color: darken($link-color, 15%) !default;
 // $link-hover-decoration: underline !default;
 
-$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Roboto Slab", serif;
+$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Nunito", sans-serif;
