--- a/www/navbar-animation.css
+++ b/www/navbar-animation.css
@@ -4,15 +4,19 @@ ul{
 .toAnimate{
     width: 0;
     height: 3px;
-    background: rgba(255,255,255,0);
+    background: rgba(255,255,255,1);
     top: 30px;
     position:absolute;
     -webkit-transition: 0.5s ease;
 }
-li{
-    -webkit-transition: 0.5s ease;
-}
+
 li:nth-of-type(1):hover ~ .toAnimate{
+    left: 6px;
+    width: 40px;
+    background: rgb(8, 209, 1);
+    box-shadow: 0 0 10px rgb(30, 255, 0);
+}
+li:nth-of-type(1):active ~ .toAnimate{
     left: 6px;
     width: 40px;
     background: rgb(8, 209, 1);
@@ -24,7 +28,19 @@ li:nth-of-type(2):hover ~ .toAnimate{
     background: rgb(5, 153, 0);
     box-shadow: 0 0 10px rgb(30, 255, 0);
 }
+li:nth-of-type(2):active ~ .toAnimate{
+    left: 57px;
+    width: 60px;
+    background: rgb(5, 153, 0);
+    box-shadow: 0 0 10px rgb(30, 255, 0);
+}
 li:nth-of-type(3):hover ~ .toAnimate{
+    left: 128px;
+    width: 72px;
+    background: rgb(3, 99, 2);
+    box-shadow: 0 0 10px rgb(30, 255, 0);
+}
+li:nth-of-type(3):active ~ .toAnimate{
     left: 128px;
     width: 72px;
     background: rgb(3, 99, 2);
