--- a/www/startpage.css
+++ b/www/startpage.css
@@ -1,47 +1,81 @@
+:root {
+  --offset: 60px;
+  --top-door1: 1vh;
+  --top-door2: 28vh;
+  --top-door3: 45vh;
+}
+
+@media (min-width: 576px) {
+  :root {
+    --offset: 150px;
+    --top-door1: 5vh;
+    --top-door2: 35vh;
+    --top-door3: 50vh;
+  }
+}
+
+@media (min-width: 768px) {
+  :root {
+    --top-door1: 8vh;
+    --offset: 250px;
+  }
+}
+
 .outer-door {
   position: relative;
 }
 
 .inner-door1 {
-  top: 10vh;
-  left: 25vw;
   position: absolute;
+  --bg-color: black;
+  --door-width: 150px;
+  --door-height: 200px;
+  top: var(--top-door1);
+  left: calc(50% - 75px);
+  --backround-pos: bottom center;
+  --door-transform-origin: right;
+  --door-transform-degree: 105deg;
+  --bg-image: url(/images/3for2.png);
 }
 
 .inner-door2 {
-  top: 40vh;
-  left: 50vw;
   position: absolute;
+  --bg-color: black;
+  --door-width: 150px;
+  --door-height: 150px;
+  top: var(--top-door2);
+  --backround-pos: center;
+  --door-transform-origin: right;
+  --door-transform-degree: 105deg;
+  left: calc(calc(50% - 75px) + var(--offset));
+  --bg-image: url(/images/whisky-kalender-scotch.png);
 }
 
-.backDoor1 {
-  width: 200px;
-  height: 300px;
+.inner-door3 {
+  --bg-color: pink;
+  position: absolute;
+  top: var(--top-door3);
+  left: calc(calc(50% - 75px) - var(--offset));
+  --door-width: 200px;
+  --door-height: 200px;
+  --backround-pos: center;
+  --door-transform-origin: left;
+  --door-transform-degree: -105deg;
+  --bg-image: url(/images/badbombcalender.jpg);
+}
+
+.backDoor {
   color: White;
   position: relative;
   background-color: #333;
-
-  --door-height: 300px;
+  width: var(--door-width);
+  height: var(--door-height);
 
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: bottom center;
-  background-image: url(/images/3for2.png);
-}
-
-.backDoor2 {
-  width: 200px;
-  height: 200px;
-  color: White;
-  position: relative;
-
-  --door-height: 200px;
-
-  background-size: contain;
-  background-color: black;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url(/images/whisky-kalender-scotch.png);
+  background-color: var(--bg-color);
+  background-image: var(--bg-image);
+  background-position: var(--backround-pos);
 }
 
 .red-door {
@@ -54,44 +88,43 @@
   background-color: green;
 }
 
+.pink-door {
+  color: blue;
+  background-color: darksalmon;
+}
+
 .door {
-  position: absolute;
   top: 0px;
   left: 0px;
-  width: 200px;
+  position: absolute;
+  width: var(--door-width);
   height: var(--door-height);
 
-  transform-origin: right;
+  transform-origin: var(--door-transform-origin);
   transition: all 0.9s ease-in-out;
 }
 
-.door p,
-.backDoor2 p {
+.door p {
   color: white;
-  font-size: 160%;
+  font-size: 120%;
   pointer-events: none;
   word-wrap: break-word;
   font-family: "Mountains of Christmas", cursive;
 }
 
-.backDoor2 > a > p {
-  color: white;
-  font-size: 100%;
+.backDoor > a > p {
+  color: yellow;
+  font-size: 75%;
   font-family: inherit;
   word-wrap: break-word;
 }
 
-.doorOpenRight {
+.doorOpen {
   /*prespectiv creates the door open effect*/
   transform: perspective(1200px) translateZ(0px) translateX(0px) translateY(0px)
-    rotateY(105deg);
+    rotateY(var(--door-transform-degree));
 }
 
-.doorOpenLeft {
-  /*prespectiv creates the door open effect*/
-  transform: perspective(1200px) translateZ(0px) translateX(0px) translateY(0px)
-    rotateY(-105deg);
-}
 .fullscreen-bg {
   position: fixed;
   top: 0;
