Fninished off cart page All participated

--- a/sass/_variable-overrides.scss
+++ b/sass/_variable-overrides.scss
@@ -9,4 +9,7 @@ $light:          #265439;
 $tooltip-bg:      $primary !default;
 $tooltip-opacity: .9 !default;
 
+$input-btn-padding-x:         .50rem !default;
+$input-btn-padding-y:         .25rem !default;
+
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Nunito", sans-serif;
