--- a/www/navbar-animation.css
+++ b/www/navbar-animation.css
@@ -15,29 +15,46 @@ li {
 }
 
 li:nth-of-type(1):hover ~ .toAnimate {
-  left: 6px;
   width: 40px;
   background: rgb(8, 209, 1);
   box-shadow: 0 0 10px rgb(30, 255, 0);
 }
 
 li:nth-of-type(2):hover ~ .toAnimate {
-  left: 57px;
+  top: 4.5rem;
   width: 60px;
   background: rgb(5, 153, 0);
   box-shadow: 0 0 10px rgb(30, 255, 0);
 }
 
 li:nth-of-type(3):hover ~ .toAnimate {
-  left: 128px;
+  top: 7rem;
   width: 72px;
   background: rgb(3, 99, 2);
   box-shadow: 0 0 10px rgb(30, 255, 0);
 }
 
 li:nth-of-type(4):hover ~ .toAnimate {
-  left: 213px;
+  top: 9.5rem;
   width: 100px;
   background: rgb(3, 99, 2);
   box-shadow: 0 0 10px rgb(30, 255, 0);
+}
+
+@media (min-width: 992px) {
+  li:nth-of-type(1):hover ~ .toAnimate{
+    left: 6px;
+  }
+
+  li:nth-of-type(2):hover ~ .toAnimate{
+    left: 57px;
+  }
+
+  li:nth-of-type(3):hover ~ .toAnimate{
+    left: 128px;
+  }
+
+  li:nth-of-type(4):hover ~ .toAnimate {
+    left: 213px;
+  }
 }
