--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,3 +16,9 @@
 @import '_OrderManager';
 
 @import '_startpage';
+
+@import '_index';
+
+@import '_navbar-animaiton';
+
+@import '_confirmation';
