--- a/sass/_navbar-animation.scss
+++ b/sass/_navbar-animation.scss
@@ -45,18 +45,23 @@ li:nth-of-type(4):hover ~ .toAnimate {
 
 @media (min-width: 992px) {
   li:nth-of-type(1):hover ~ .toAnimate{
+    top: 2rem;
     left: 6px;
   }
 
   li:nth-of-type(2):hover ~ .toAnimate{
+    top: 2rem;
     left: 57px;
   }
 
   li:nth-of-type(3):hover ~ .toAnimate{
+    top: 2rem;
     left: 128px;
   }
 
   li:nth-of-type(4):hover ~ .toAnimate {
+    top: 2rem;
     left: 213px;
   }
 }
+
